# smart-vuln-headers

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
smart_vuln_headers/: __init__.py  core.py
tests/: test_smart_vuln_headers.py
